@@ -1,3 +1,7 @@
+2004-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* S_scheme_fields.cpp: Fix transparent scatterers for MonoStacks.
+
 2004-04-15  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* field.cpp: Detect and fix overflow.
